# particle-system

./: LICENSE  README.md
app/: README.md  build.py  dev.py  particle_simulation.desktop  pyproject.toml  run.py
app/src/particle_system/: schemas.py
app/src/pygame/: helper.py  main.py
