[project]
name = "particle-simulation"
version = "0.1.0"
description = "A basic particle simulation engine"
authors = [
    {name = "Lucas Guarnier"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pillow (>=11.2.1,<12.0.0)",
    "pygame (>=2.6.1,<3.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "watchdog (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

